force-app/main/default/objects/Computer__c.object
<CustomObject>
    <description>Task object for Reports and Dashboard</description>
    <fields>
        <fullName>Brand__c</fullName>
        <defaultValue>&apos;Dell&apos;</defaultValue>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IBM</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
                <value>
                    <fullName>Microsoft</fullName>
                </value>
                <value>
                    <fullName>Hitachi</fullName>
                </value>
                <value>
                    <fullName>Canon</fullName>
                </value>
                <value>
                    <fullName>Toshiba</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Computer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Brand__c</columns>
        <columns>Name__c</columns>
        <columns>Price__c</columns>
        <columns>Weight__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0}</displayFormat>
        <label>Computer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Computer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>